fix for Java 9
Detect if this is generated with Java 9 and add the appropriate
compiler flags to mitigate CLJS’s dependency on java.xml.bind which is
no longer included in java runtime by default.